# growbot

./: .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.pi.yml  docker-compose.yml  pyproject.toml  setup.cfg  template.env  workspace.code-workspace
client/: .prettierrc.json  index.html  package.json  vite.config.ts
client/src/: App.tsx  Layout.tsx  index.css  index.tsx  stores.tsx
client/src/components/: Canvas.tsx  Controls.tsx  HeaderIcon.tsx  Nav.tsx  Overlay.tsx  ProgressSlider.tsx  RangeSelect.tsx  ThemeToggle.tsx  WindowSelect.tsx  WindowSize.tsx
client/src/hooks/: useCanvas.tsx
client/src/pages/: ErrorPage.tsx  Overview.tsx  Settings.tsx  Timelapse.tsx  Timeseries.tsx
client/src/stores/: ServerStore.tsx  TimelapseStore.tsx  UIStore.tsx  root.tsx
config/: .env.template  mosquitto.conf  template.env
config/ssh/: known_hosts
crony/: README.md  camera.cron  display.py  main.py  pyproject.toml  simulate.py
ctrl/: button.py  pyproject.toml
io/: display.py  draw.py  save.py
nodemcu/: Config_tasmota_7489_9.1.0.dmp
pi/: Makefile  display.py  draw.py  main.py  save.py
pi_display/: camera.cron  pyproject.toml
scripts/: df_tests.ipynb  mqtt.py
server/: Dockerfile  __init__.py  cron  mqtt.py  pyproject.toml
server/app/: main.py  timelapse.py
server/hub/: capture.py  influx.py  mqtt.py  spaces.py  upload.py
server/scripts/: photos_to_db.py  reset_db.py  spaces_to_db.py  upload.py
sidekick/: README.md  pyproject.toml
