[tool.poetry]
name = "growbot"
version = "2.0.0"
description = "Bucket-based, code-powered, 3d-printed horticulture"
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^8.0.1"
inky = "^1.1.1"
asyncio-mqtt = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
mypy = "^0.950"
flake8 = "^4.0"
flake8-black = "^0.3"
isort = "^5.10"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
