[tool.poetry]
name = "growbot-crony"
version = "1.0"
description = "Minimal Pi Zero (W) based eInk UI"
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^9.4"
inky = "^1.1.1"
asyncio-mqtt = "^0.8.0"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
