[tool.poetry]
name = "growbot-server"
version = "2.0"
description = "Bucket-based, code-powered, 3d-printed horticulture"
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.11"
asyncio-mqtt = "^0.16.1"
fastapi = "^0.92.0"
fastapi-mqtt = "^1.0.7"
python-decouple = "^3.7"

[tool.poetry.dev-dependencies]
black = "^23.1"
mypy = "^1.0"
ruff = "^0.0.252"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
