[tool.poetry]
name = "growbot-server"
version = "2.0"
description = "Bucket-based, code-powered, 3d-printed horticulture"
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.11"
asyncio-mqtt = "^0.16.1"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^23.1"
ipython = "^8.10"
ipykernel = "^6.21"
mypy = "^1.0"
notebook = "^6.5"
ruff = "^0.0.252"

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.masonry.api"
